[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world.gd" type="Script" id=2]
[ext_resource path="res://scenes/SpawnLocation.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/next_wave.gd" type="Script" id=4]
[ext_resource path="res://font/AldotheApache.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 235.347, 156.869 )

[node name="SpawnLocation" parent="." instance=ExtResource( 3 )]
position = Vector2( 233.224, 20.6034 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="." groups=[
"spawn",
]]
position = Vector2( 233.597, 21.3574 )

[node name="Position2D2" type="Position2D" parent="." groups=[
"spawn",
]]
position = Vector2( 126.81, 20.0226 )

[node name="Position2D3" type="Position2D" parent="." groups=[
"spawn",
]]
position = Vector2( 339.717, 21.3574 )

[node name="UI" type="Node2D" parent="."]
z_index = 2

[node name="Control" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave-text" type="Label" parent="UI/Control"]
modulate = Color( 0.941176, 1, 0, 1 )
margin_left = 5.94604
margin_top = 5.94604
margin_right = 45.946
margin_bottom = 19.946
custom_fonts/font = SubResource( 1 )
text = "wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_wave" type="Label" parent="UI/Control"]
modulate = Color( 0.980392, 1, 0, 1 )
margin_left = 67.8781
margin_top = 5.50058
margin_right = 77.8781
margin_bottom = 25.5006
custom_fonts/font = SubResource( 2 )
text = "0"
script = ExtResource( 4 )

[node name="Next_wave-text" type="Label" parent="UI/Control"]
visible = false
margin_left = 177.426
margin_top = 91.9239
margin_right = 301.426
margin_bottom = 116.924
custom_fonts/font = SubResource( 3 )
text = "Next Wave"
uppercase = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
